--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.12.2",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
@@ -16,7 +18,9 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
